    is a documentation change for end users.  Also
    simplified how events get linked to engines
    and connections internally. [ticket:2059]

  - The Sequence() construct, when passed a MetaData() 
    object via its 'metadata' argument, will be 
    included in CREATE/DROP statements within
    metadata.create_all() and metadata.drop_all(), 
    including "checkfirst" logic.  [ticket:2055]

- ext
  - Association proxy now has correct behavior for
    any(), has(), and contains() when proxying
    a many-to-one scalar attribute to a one-to-many
    collection (i.e. the reverse of the 'typical'
    association proxy use case)  [ticket:2054]

- examples
  - Beaker example now takes into account 'limit'
    and 'offset', bind params within embedded
    FROM clauses (like when you use union() or 
    from_self()) when generating a cache key.

- declarative
  - Fixed regression whereby composite() with 
    Column objects placed inline would fail
    to initialize.  The Column objects can now
    be inline with the composite() or external
    and pulled in via name or object ref. 
    [ticket:2058]

  - the dictionary at the end of the __table_args__
    tuple is now optional.  [ticket:1468]

0.7.0b1
=======
- Detailed descriptions of each change below are 
  described at:
  http://www.sqlalchemy.org/trac/wiki/07Migration

- general
  - New event system, supercedes all extensions, listeners,
    etc.  [ticket:1902]

  - Logging enhancements
    [ticket:1926]

  - Setup no longer installs a Nose plugin
    [ticket:1949]

  - The "sqlalchemy.exceptions" alias in sys.modules
    has been removed.   Base SQLA exceptions are 
    available via "from sqlalchemy import exc".
    The "exceptions" alias for "exc" remains in 
    "sqlalchemy" for now, it's just not patched into 
    sys.modules.

- orm
  - More succinct form of query.join(target, onclause)
    [ticket:1923]

  - Hybrid Attributes, implements/supercedes synonym()
    [ticket:1903]
